# backend/routes/Router.js
@@ -6,7 +6,9 @@ const superadminRoutes = require('../routes/Superadmin'); // Assuming your admin
 const vendorRoutes = require('../routes/Vendors'); // Assuming your admin routes are in vendorRoutes.js
 const categoryRoutes = require('../routes/Category'); // Assuming your admin routes are in categoryRoutes.js
 const subcategoryRoutes = require('../routes/Subcategory'); // Assuming your admin routes are in subcategoryRoutes.js
-const productRoutes = require('../routes/Product'); // Assuming your admin routes are in productRoutes.js
+// const productRoutes = require('../routes/Product'); // Assuming your admin routes are in productRoutes.js
+const electronicRoutes = require('../routes/Electronics'); // Assuming your admin routes are in electronicRoutes.js
+const mobilesRoutes = require('../routes/Mobile'); // Assuming your admin routes are in mobilesRoutes.js
 const reviewRoutes = require('../routes/Review'); // Assuming your admin routes are in reviewRoutes.js
 const cartRoutes = require('../routes/Cart'); // Assuming your admin routes are in cartRoutes.js
 const userRoutes = require('../routes/User'); // Assuming your admin routes are in userRoutes.js
@@ -23,7 +25,11 @@ router.use('/Category', categoryRoutes);
 //SubCategory  Routes
 router.use('/SubCategory', subcategoryRoutes);
 //Product  Routes
-router.use('/Product', productRoutes);
+// router.use('/Product', productRoutes);
+//Electronic  Routes
+router.use('/Electronic', electronicRoutes);
+//Mobiles  Routes
+router.use('/Mobiles', mobilesRoutes);
 //Review  Routes
 router.use('/Review', reviewRoutes);
 //user  Routes
